# my-collection

./: .gitignore  248.cpp  CMakeLists.txt  Untitled.ipynb  anytype.cpp  brute.c  cmdline.c  cmdmani.c  exels.c  flexibleArray.c  fork.c  freq.cpp  hashTable.cpp  hello.asm  lnklist.cpp  log.cpp  main.cpp  mergeKlinklist.cpp  mergeKlinklistBrute.cpp  mymodule1.cpp  mymodule2.cpp  newnumsys.cpp  null.cpp  oper_over.cpp  pattern.cpp  poly.cpp  poly_raw.cpp  randomBytesGenerator.cpp  readcsv.py  regex.cpp  revNodesInKgrps.cpp  rotateList.cpp  scanset.c  sizeofstruct.c  spcl.cpp  strings.cpp  structuring-the-document.c  test.c  tet.cpp  thread.cpp  (+6 more)
TNP/: 100people.c  cpstring.c  eggs.c  monkey.c  powerof2.c  readsrccode.c
gtest/: 2d-grid.cpp  CMakeLists.txt
gtest/2d-grid/: 2d-grid.cpp  2d-grid.hpp  2d-grid_test.cc  CMakeLists.txt
gtest/atoi/: CMakeLists.txt  myatoi.cpp  myatoi.hpp  myatoi_test.cc
gtest/minWindowSubstr/: CMakeLists.txt  minWindowSubstr.cpp  minWindowSubstr.hpp  minWindowSubstr_test.cc
gtest/permString/: CMakeLists.txt  permString.cpp  permString.hpp  permString_test.cc
gtest/sudoku/: CMakeLists.txt  sudoku.cpp  sudoku.hpp  sudoku_test.cc
test/: Cargo.toml
test/src/: main.rs
